--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,20 @@
-[build] 
+[build]
   publish = "public"
   command = "hugo"
 
 [context.production.environment]
-  HUGO_VERSION = "0.54.0" # if older, use format: 0.53 (no trailing zero)
+  HUGO_VERSION = "0.73.0"
   HUGO_ENV = "production"
   HUGO_ENABLEGITINFO = "true"
   
 [context.branch-deploy.environment]
-  HUGO_VERSION = "0.54.0" # if older, use format: 0.53 (no trailing zero)
+  HUGO_VERSION = "0.73.0"
 
 [context.deploy-preview.environment]
-  HUGO_VERSION = "0.54.0"
+  HUGO_VERSION = "0.73.0"
+  
+[context.deploy-preview]
+  command = "hugo -b $DEPLOY_PRIME_URL --buildFuture"
+
+[context.branch-deploy]
+  command = "hugo -b $DEPLOY_PRIME_URL --buildFuture"
